--- a/BookReaderRnd.csproj
+++ b/BookReaderRnd.csproj
@@ -6,12 +6,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CF256584-01C2-442E-A171-8A6D87D3CA42}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BookReaderRnd</RootNamespace>
+    <RootNamespace>NSProgram</RootNamespace>
     <AssemblyName>BookReaderRnd</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,9 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CChess.cs" />
+    <Compile Include="CChessExt.cs" />
     <Compile Include="CExtensions.cs" />
     <Compile Include="CUci.cs" />
-    <Compile Include="CUndo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
